<resources>
    <string name="app_name">Sultan Ride</string>
    <string name="enter">Enter</string>
    <string name="by_creating_an_account_you_agree_to_our_terms_of_service_and_privacy_policy">By creating an account, you agree to our Terms of Service and Privacy Policy</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="get_moving_with_sultan_ride">Get moving with Sultan Ride.</string>
    <string name="hello_nice_to_meet_you">Hello, nice to meet you!</string>
    <string name="enter_your_otp_code_below">Enter your OTP code below</string>
    <string name="resend_code_in_10_seconds">Resend Code in 10 seconds</string>
    <string name="resend_code_in_10_second">Resend code in 10 Second</string>
    <string name="submit">SUBMIT</string>
    <string name="change_number">Change Number</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="personal_information">Personal Information</string>
    <string name="browse">Browse</string>
    <string name="copyright">Copyright</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="data_providers">Data Providers</string>
    <string name="software_licenses">Software Licenses</string>
    <string name="location_information">Location Information</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_text">hint</string>
</resources>