<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Legalinformation"
    android:background="#00FFFFFF">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg">
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp"
        android:layout_alignParentBottom="true">
      <androidx.cardview.widget.CardView
          style="@style/LegalInfoCard">
          <TextView
              android:text="@string/copyright"
              style="@style/legalinfotextstyle"/>
      </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            style="@style/LegalInfoCard">
            <TextView
                style="@style/legalinfotextstyle"
                android:text="@string/terms_conditions" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            style="@style/LegalInfoCard">
            <TextView
                style="@style/legalinfotextstyle"
                android:text="@string/privacy_policy" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            style="@style/LegalInfoCard">
            <TextView
                style="@style/legalinfotextstyle"
                android:text="@string/data_providers" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            style="@style/LegalInfoCard">
            <TextView
                style="@style/legalinfotextstyle"
                android:text="@string/software_licenses" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            style="@style/LegalInfoCard">
            <TextView
                style="@style/legalinfotextstyle"
                android:text="@string/location_information" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</RelativeLayout>