<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <LinearLayout
        style="@style/userdetails"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="80dp"
        android:orientation="vertical">
        <ImageView
            android:layout_width="320dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:layout_marginBottom="100dp"
            android:src="@drawable/image1">
        </ImageView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello_nice_to_meet_you"
            android:textSize="17sp" />

        <TextView
            style="@style/largetext"
            android:text="@string/get_moving_with_sultan_ride"
            android:textColor="@color/Black"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_mobile_number"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:id="@+id/phone_number"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <TextView
            style="@style/smalltext"
            android:text="@string/by_creating_an_account_you_agree_to_our_terms_of_service_and_privacy_policy" />


        <Button
            android:id="@+id/varifybtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/Orange"
            android:text="Verify"
            android:layout_gravity="end"
            android:textColor="@color/White" />
    </LinearLayout>
</RelativeLayout>