<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OTP_Activity">

    <LinearLayout
       style="@style/userdetails"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        android:orientation="vertical">
        <ImageView
            android:layout_width="320dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:layout_marginBottom="100dp"
            android:src="@drawable/otpverify">
        </ImageView>
        <TextView
            style="@style/largetext"
            android:text="@string/enter_your_otp_code_below"
            android:textColor="@color/Black"
            android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:id="@+id/code"/>
            </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/resend_code_in_10_second"
            android:textColor="@color/Black" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="end">

            <Button
                style="@style/button"
                android:background="@color/Orange"
                android:text="Resend OTP"
                android:id="@+id/resendbtn"
                android:layout_marginEnd="10dp"
                android:textColor="@color/White" />
        <Button
            style="@style/button"
            android:background="@color/Orange"
            android:text="@string/submit"
            android:id="@+id/submit"
            android:textColor="@color/White" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>